--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="login">开始挑战</string>
     <string name="username">昵称</string>
     <string name="password">密码</string>
+    <string name="password_confirm">确认密码</string>
+    <string name="grade_name">年级</string>
+    <string name="logout">注销当前用户</string>
+    <string name="slogan1">A passage a day</string>
+    <string name="slogan2">Keeps the teacher away.</string>
+    <string name="slogan3">日读一文  无师自通</string>
 </resources>
