--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,13 +6,21 @@
     <string name="hello_world">Hello world!</string>
     <string name="login_title">初中英语   每日一篇</string>
     <string name="login">开始挑战</string>
-    <string name="username">昵称</string>
-    <string name="password">密码</string>
-    <string name="password_confirm">确认密码</string>
-    <string name="grade_name">年级</string>
+    <string name="username">输入你的手机号</string>
+    <string name="password">密码不少于8位</string>
+    <string name="password_confirm">确认密码必须与密码一致</string>
+    <string name="grade_name">年级：</string>
     <string name="logout">注销当前用户</string>
     <string name="slogan1">首字母</string>
     <string name="slogan2">Keeps the teacher away.</string>
     <string name="slogan3">日读一文  无师自通</string>
     <string name="company">喜点科技</string>
+    <string name="phone">手机号：</string>
+    <string name="passwd">设置密码：</string>
+    <string name="passwd_confirm">确认密码：</string>
+    <string name="signup">完成注册</string>
+    <string name="signin">登录</string>
+    <string name="valicode">验证码：</string>
+    <string name="getcode">获取验证码</string>
+    <string name="fillcode">输入短信验证码</string>
 </resources>
